Fixed bug #40467 (Partial SOAP request sent when XSD sequence or choice include minOccurs=0)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@229863 c90b9560-bf6c-de11-be94-00142212c4b1